# Quaver-mapper-QoL-pack

./: .gitignore  Cargo.toml  README.md
app/: index.html  package-lock.json  package.json
app/scripts/: build.mjs  dev.mjs
app/src/: App.tsx  lib.test.ts  lib.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
core/: Cargo.toml
core/src/: backup.rs  bookmarks.rs  checker.rs  diff.rs  lib.rs  macros.rs  model.rs  qua_parser.rs  resnap.rs
core/tests/: core_tests.rs
docs/: ROADMAP.md  SPEC.md  できること.md
plugin/: build.ps1  main.lua  plugin.ini  plugin.lua
